<resources>
    <string name="app_name">NoteApp_UpSchool</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="save_to">Save To</string>
    <string name="select_date">Select Date   </string>
    <string name="textview">TextView</string>
    <string name="delete">Delete</string>
    <string name="date">Date</string>
    <string name="detail">Detail</string>
</resources>