<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.detail.DetailNoteScreen"
    android:background="@color/white">

    <ImageButton
        android:id="@+id/btn_detail_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/back_icon"
        android:background="@color/white"
        android:layout_marginTop="@dimen/_24sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="@dimen/_16sdp"
        />

    <TextView
        android:id="@+id/tv_detail_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/detail"
        android:textStyle="bold"
        android:textSize="@dimen/_20ssp"
        android:layout_marginStart="@dimen/_12sdp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/_24sdp"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@id/btn_detail_back"
        />
    
    <TextView
        android:id="@+id/tv_detail_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_detail_header"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/_32sdp"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:text="@string/title"
        android:textSize="@dimen/_16ssp"
        android:textStyle="bold|italic"
        android:textColor="@color/black"
        />

    <TextView
        android:id="@+id/tv_detail_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_12sdp"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        app:layout_constraintTop_toBottomOf="@id/tv_detail_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/description"
        android:textSize="@dimen/_12ssp"
        android:textColor="@color/black"
        />

    <TextView
        android:id="@+id/tv_detail_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_detail_description"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/_12sdp"
        android:layout_marginStart="@dimen/_16sdp"
        android:text="@string/date"
        android:textSize="@dimen/_12ssp"
        android:textColor="@color/dark_grey"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_detail_delete"
        android:layout_width="0dp"
        android:layout_height="@dimen/_48sdp"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_16sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_detail_date"
        android:text="@string/delete"
        android:textSize="@dimen/_16ssp"
        android:textColor="@color/white"
        android:backgroundTint="@color/main_color"
        />

</androidx.constraintlayout.widget.ConstraintLayout>